# pr2tests

./: .gitignore  PLAN.md  README.md  apptest.yml  pyproject.toml
.github/workflows/: dashboard.yml
apptest/: cli.py  config.py  llm_retry.py  nav_graph.py  run_manager.py
apptest/agents/: __init__.py  app_agent.py  base.py  build_agent.py  device_agent.py
apptest/analyzer/: change_classifier.py  context_builder.py  dependency_tracer.py  diff_parser.py  layout_parser.py  manifest_parser.py  profile_updater.py  screen_mapper.py  strings_parser.py
apptest/generator/: prompts.py  test_generator.py
apptest/reporter/: __init__.py  html_renderer.py  report_builder.py  report_collector.py  report_index.py  report_schema.py
apptest/runner/: adb.py  computer_use.py  console_logger.py  executor.py  prompts.py  schemas.py  step_parser.py  trace.py  vision.py
apptest/scanner/: profile_manager.py  project_scanner.py
apptest/tests/: test_change_classifier.py  test_dependency_tracer.py  test_diff_parser.py  test_generator.py  test_html_renderer.py  test_integration_init.py  test_integration_wikipedia.py  test_layout_parser.py  test_manifest_parser.py  test_nav_graph.py  test_runner.py  (+12 more)
docs/: TODO-data-storage.md  apptest-framework-spec.md  architecture.md  changelog-agent-setup-framework.md  changelog-app-profile-system.md  changelog-c204d7d-resource-tracing.md  changelog-connect-report-to-run.md  changelog-d9dd515-test-generator.md  changelog-report-dashboard.md  changelog-test-runner.md  changelog-trace-and-kimi.md  design-change-classification.md  plan-test-runner.md
(+21 files in other folders)
